--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             <span class="section__subtitle">My introduction</span>
 
             <div class="about__container container grid">
-                <img src="assets/img/ToanBNH.JPG" alt="" class="about__img" />
+                <img src="assets/img/ToanBlackSuits.jpg" alt="" class="about__img" />
 
                 <div class="about__data">
                     <p class="about__description">
@@ -385,11 +385,11 @@
 
             <div class="qualification__container container">
                 <div class="qualification__tabs">
-                    <div class="qualification__button button--flex qualification__active" data-target="#highschool">
+                    <div class="qualification__button button--flex qualification__active" id="highschoolSelector" data-target="#highschool" onclick="changeContent()">
                         <i class="uil uil-graduation-cap qualification__icon"></i> High School
                     </div>
 
-                    <div class="qualification__button button--flex" data-target="#university">
+                    <div class="qualification__button button--flex" id="universitySelector" data-target="#university" onclick="changeContent()">
                         <i class="uil uil-university qualification__icon"></i> University
                     </div>
                 </div>
