--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="home__data">
                         <h1 class="home__title">Hi, I am Toan</h1>
                         <h3 class="home__subtitle">
-                            Machine Learning Engineer, AI Data Analyst, Front-end Web Developer
+                            Student
                         </h3>
                         <p class="home__description">
                             A Computer Science sophomore from the University of Massachusetts Amherst
