--- a/index.html
+++ b/index.html
@@ -159,19 +159,19 @@
 
                     <div class="about__info">
                         <div>
-                            <span class="about__info-title">0.25</span>
-                            <span class="about__info-name">Years of <br />
+                            <span class="about__info-title">3</span>
+                            <span class="about__info-name">Months of <br />
                   experience</span
                 >
               </div>
               <div>
-                <span class="about__info-title">8+</span>
+                <span class="about__info-title">5+</span>
                             <span class="about__info-name">Projects <br />
                   completed</span
                 >
               </div>
               <div>
-                <span class="about__info-title">0</span>
+                <span class="about__info-title">1</span>
                             <span class="about__info-name">Companies <br />
                   worked</span
                 >
@@ -204,7 +204,7 @@
 
                                             <div>
                                                 <h1 class="skills__title">Front-end Web Development</h1>
-                                                <span class="skills__subtitle">0.25 year</span>
+                                                <span class="skills__subtitle">3 months</span>
                                             </div>
 
                                             <i class="uil uil-angle-down skills__arrow"></i>
@@ -214,7 +214,7 @@
                                             <div class="skills__data">
                                                 <div class="skills__titles">
                                                     <h3 class="skills__name">HTML</h3>
-                                                    <span class="skills__number">60%</span>
+                                                    <span class="skills__number">70%</span>
                                                 </div>
                                                 <div class="skills__bar">
                                                     <span class="skills__percentage skills__html"></span>
@@ -223,7 +223,7 @@
                                             <div class="skills__data">
                                                 <div class="skills__titles">
                                                     <h3 class="skills__name">CSS</h3>
-                                                    <span class="skills__number">50%</span>
+                                                    <span class="skills__number">70%</span>
                                                 </div>
                                                 <div class="skills__bar">
                                                     <span class="skills__percentage skills__css"></span>
@@ -232,7 +232,7 @@
                                             <div class="skills__data">
                                                 <div class="skills__titles">
                                                     <h3 class="skills__name">Javascript</h3>
-                                                    <span class="skills__number">70%</span>
+                                                    <span class="skills__number">90%</span>
                                                 </div>
                                                 <div class="skills__bar">
                                                     <span class="skills__percentage skills__js"></span>
@@ -241,7 +241,7 @@
                                             <div class="skills__data">
                                                 <div class="skills__titles">
                                                     <h3 class="skills__name">React</h3>
-                                                    <span class="skills__number">0%</span>
+                                                    <span class="skills__number">50%</span>
                                                 </div>
                                                 <div class="skills__bar">
                                                     <span class="skills__percentage skills__react"></span>
@@ -267,7 +267,7 @@
                                             <div class="skills__data">
                                                 <div class="skills__titles">
                                                     <h3 class="skills__name">Python</h3>
-                                                    <span class="skills__number">80%</span>
+                                                    <span class="skills__number">90%</span>
                                                 </div>
                                                 <div class="skills__bar">
                                                     <span class="skills__percentage skills__python"></span>
@@ -276,7 +276,7 @@
                                             <div class="skills__data">
                                                 <div class="skills__titles">
                                                     <h3 class="skills__name">Java</h3>
-                                                    <span class="skills__number">40%</span>
+                                                    <span class="skills__number">60%</span>
                                                 </div>
                                                 <div class="skills__bar">
                                                     <span class="skills__percentage skills__java"></span>
@@ -313,7 +313,7 @@
                                             <div class="skills__data">
                                                 <div class="skills__titles">
                                                     <h3 class="skills__name">Statistics</h3>
-                                                    <span class="skills__number">70%</span>
+                                                    <span class="skills__number">80%</span>
                                                 </div>
                                                 <div class="skills__bar">
                                                     <span class="skills__percentage skills__statistics"></span>
@@ -322,7 +322,7 @@
                                             <div class="skills__data">
                                                 <div class="skills__titles">
                                                     <h3 class="skills__name">Linear Algebra</h3>
-                                                    <span class="skills__number">70%</span>
+                                                    <span class="skills__number">80%</span>
                                                 </div>
                                                 <div class="skills__bar">
                                                     <span class="skills__percentage skills__linearalgebra"></span>
@@ -338,7 +338,7 @@
 
                                             <div>
                                                 <h1 class="skills__title">Data Analysis</h1>
-                                                <span class="skills__subtitle">0.25 years</span>
+                                                <span class="skills__subtitle">3 months/span>
                                             </div>
 
                                             <i class="uil uil-angle-down skills__arrow"></i>
@@ -349,33 +349,33 @@
                                                 <div class="skills__titles">
                                                     <h3 class="skills__name">SQL</h3>
                                                     <span class="skills__number">60%</span>
-                                                </div>
-                                                <div class="skills__bar">
-                                                    <span class="skills__percentage skills__sql"></span>
-                                                </div>
                                             </div>
-                                            <div class="skills__data">
-                                                <div class="skills__titles">
-                                                    <h3 class="skills__name">Python</h3>
-                                                    <span class="skills__number">70%</span>
-                                                </div>
-                                                <div class="skills__bar">
-                                                    <span class="skills__percentage skills__pythondata"></span>
-                                                </div>
+                                            <div class="skills__bar">
+                                                <span class="skills__percentage skills__sql"></span>
                                             </div>
-                                            <div class="skills__data">
-                                                <div class="skills__titles">
-                                                    <h3 class="skills__name">Power BI</h3>
-                                                    <span class="skills__number">0%</span>
-                                                </div>
-                                                <div class="skills__bar">
-                                                    <span class="skills__percentage skills__powerbi"></span>
-                                                </div>
+                                        </div>
+                                        <div class="skills__data">
+                                            <div class="skills__titles">
+                                                <h3 class="skills__name">Python</h3>
+                                                <span class="skills__number">70%</span>
+                                            </div>
+                                            <div class="skills__bar">
+                                                <span class="skills__percentage skills__pythondata"></span>
+                                            </div>
+                                        </div>
+                                        <div class="skills__data">
+                                            <div class="skills__titles">
+                                                <h3 class="skills__name">Power BI</h3>
+                                                <span class="skills__number">60%</span>
+                                            </div>
+                                            <div class="skills__bar">
+                                                <span class="skills__percentage skills__powerbi"></span>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
+                        </div>
         </section>
 
         <!--==================== QUALIFICATION ====================-->
