--- a/index.html
+++ b/index.html
@@ -282,6 +282,15 @@
                                                     <span class="skills__percentage skills__java"></span>
                                                 </div>
                                             </div>
+                                            <div class="skills__data">
+                                                <div class="skills__titles">
+                                                    <h3 class="skills__name">C</h3>
+                                                    <span class="skills__number">60%</span>
+                                                </div>
+                                                <div class="skills__bar">
+                                                    <span class="skills__percentage skills__c"></span>
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -338,7 +347,7 @@
 
                                             <div>
                                                 <h1 class="skills__title">Data Analysis</h1>
-                                                <span class="skills__subtitle">3 months/span>
+                                                <span class="skills__subtitle">3 months</span>
                                             </div>
 
                                             <i class="uil uil-angle-down skills__arrow"></i>
@@ -349,33 +358,33 @@
                                                 <div class="skills__titles">
                                                     <h3 class="skills__name">SQL</h3>
                                                     <span class="skills__number">60%</span>
+                                                </div>
+                                                <div class="skills__bar">
+                                                    <span class="skills__percentage skills__sql"></span>
+                                                </div>
                                             </div>
-                                            <div class="skills__bar">
-                                                <span class="skills__percentage skills__sql"></span>
+                                            <div class="skills__data">
+                                                <div class="skills__titles">
+                                                    <h3 class="skills__name">Python</h3>
+                                                    <span class="skills__number">70%</span>
+                                                </div>
+                                                <div class="skills__bar">
+                                                    <span class="skills__percentage skills__pythondata"></span>
+                                                </div>
                                             </div>
-                                        </div>
-                                        <div class="skills__data">
-                                            <div class="skills__titles">
-                                                <h3 class="skills__name">Python</h3>
-                                                <span class="skills__number">70%</span>
-                                            </div>
-                                            <div class="skills__bar">
-                                                <span class="skills__percentage skills__pythondata"></span>
-                                            </div>
-                                        </div>
-                                        <div class="skills__data">
-                                            <div class="skills__titles">
-                                                <h3 class="skills__name">Power BI</h3>
-                                                <span class="skills__number">60%</span>
-                                            </div>
-                                            <div class="skills__bar">
-                                                <span class="skills__percentage skills__powerbi"></span>
+                                            <div class="skills__data">
+                                                <div class="skills__titles">
+                                                    <h3 class="skills__name">Power BI</h3>
+                                                    <span class="skills__number">60%</span>
+                                                </div>
+                                                <div class="skills__bar">
+                                                    <span class="skills__percentage skills__powerbi"></span>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>
         </section>
 
         <!--==================== QUALIFICATION ====================-->
