--- a/index.html
+++ b/index.html
@@ -686,8 +686,8 @@
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">3D portfolio generator</h3>
                             <p class="portfolio__description">Generating 3D portfolios</p>
-                            <a href="#" class="button button--flex__button--small__portfolio__button">
-                                Demo
+                            <a href="https://toan-3d-portfolio-creator.netlify.app" class="button button--flex__button--small__portfolio__button">
+                                Explore
                                 <i class="uil uil-arrow-right button__icon"></i>
                             </a>
                         </div>
@@ -699,8 +699,8 @@
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">Modern Portfolio</h3>
                             <p class="portfolio__description">Portfolio adaptable to all devices</p>
-                            <a href="#" class="button button--flex__button--small__portfolio__button">
-                                Demo
+                            <a href="https://toanquoctran.github.io/ToanTranSophomorePortfolio/" class="button button--flex__button--small__portfolio__button">
+                                Explore
                                 <i class="uil uil-arrow-right button__icon"></i>
                             </a>
                         </div>
@@ -712,8 +712,8 @@
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">Monetary Toan Bank</h3>
                             <p class="portfolio__description">Essential and minimal banking app</p>
-                            <a href="#" class="button button--flex__button--small__portfolio__button">
-                                Demo
+                            <a href="https://toanquoctran.github.io/MonetaryToanBank/" class="button button--flex__button--small__portfolio__button">
+                                Explore
                                 <i class="uil uil-arrow-right button__icon"></i>
                             </a>
                         </div>
