--- a/index.html
+++ b/index.html
@@ -159,19 +159,19 @@
 
                     <div class="about__info">
                         <div>
-                            <span class="about__info-title">3</span>
+                            <span class="about__info-title">14</span>
                             <span class="about__info-name">Months of <br />
                   experience</span
                 >
               </div>
               <div>
-                <span class="about__info-title">5+</span>
+                <span class="about__info-title">10+</span>
                             <span class="about__info-name">Projects <br />
                   completed</span
                 >
               </div>
               <div>
-                <span class="about__info-title">1</span>
+                <span class="about__info-title">3</span>
                             <span class="about__info-name">Companies <br />
                   worked</span
                 >
@@ -181,9 +181,9 @@
             <div class="about__buttons">
               <a
                 download=""
-                href="assets/pdf/High School Toan's CV.pdf"
+                href="assets/pdf/ToanQuocTranSophomoreResume.pdf"
                 class="button button--flex"
-                >Download CV <i class="uil uil-download-alt button__icon"></i
+                >Download Resume <i class="uil uil-download-alt button__icon"></i
               ></a>
             </div>
           </div>
