--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
 
         <!--==================== SERVICES ====================-->
         <section class="services section" id="services">
-            <h2 class="section__title">Services</h2>
+            <h2 class="section__title">Leadership Positions</h2>
             <span class="section__subtitle">My contributions to the community</span>
 
             <div class="services__container container grid">
@@ -582,7 +582,7 @@
                                 </li>
                                 <li class="services__modal-service">
                                     <i class="uil uil-check-circle services__modal-icon"></i>
-                                    <p>I assigned team members and developed and maintained the core platform.</p>
+                                    <p>I am responsible for creating and maintaining the customer support chatting app and assigning team members and developed and maintained the core platform.</p>
                                 </li>
                                 <li class="services__modal-service">
                                     <i class="uil uil-check-circle services__modal-icon"></i>
@@ -639,7 +639,7 @@
                 <div class="services__content">
                     <div>
                         <i class="uil uil-pen services__icon"></i>
-                        <h3 class="services__title">Youth Creativity <br> Technical Translator</h3>
+                        <h3 class="services__title">PiMA <br> Chief of External Affair Department</h3>
                     </div>
 
                     <span class="button button--flex button--small button--link services__button">
@@ -674,8 +674,8 @@
 
         <!--==================== PORTFOLIO ====================-->
         <section class="portfolio section" id="portfolio">
-            <h2 class="section__title">Portfolio</h2>
-            <span class="section__subtitle">Most recent work</span>
+            <h2 class="section__title">Projects</h2>
+            <span class="section__subtitle">Most substantial work</span>
 
             <div class="portfolio__container container swiper-container">
                 <div class="swiper-wrapper">
@@ -684,8 +684,9 @@
                         <img src="assets/img/portfolio1.jpg" alt="" class="portfolio__img">
 
                         <div class="portfolio__data">
-                            <h3 class="portfolio__title">3D portfolio generator</h3>
-                            <p class="portfolio__description">Generating 3D portfolios</p>
+                            <h3 class="portfolio__title">React 3D Portfolio Generator</h3>
+                            <p class="portfolio__description">The website, built with ReactJs, contains two part: <br> The input template with profile picture, personal information, important links, and professional information of the users. <br> The 3D portfolio, using the library ThreeJs,
+                                is exported with the input information.</p>
                             <a href="https://toan-3d-portfolio-creator.netlify.app" class="button button--flex__button--small__portfolio__button">
                                 Explore
                                 <i class="uil uil-arrow-right button__icon"></i>
@@ -697,9 +698,10 @@
                         <img src="assets/img/portfolio2.jpg" alt="" class="portfolio__img">
 
                         <div class="portfolio__data">
-                            <h3 class="portfolio__title">Modern Portfolio</h3>
-                            <p class="portfolio__description">Portfolio adaptable to all devices</p>
-                            <a href="https://toanquoctran.github.io/ToanTranSophomorePortfolio/" class="button button--flex__button--small__portfolio__button">
+                            <h3 class="portfolio__title">Artificial Intelligence React News Reader</h3>
+                            <p class="portfolio__description">The website, built with ReactJs, uses an advanced Voice AI Platform that allows the users to add a voice interface to the News Reader without overhead. <br> The users are able to control literally every aspect in the app using
+                                their voice. <br> The app contains Material UI API for a robust, customizable, and accessible library of advanced components.</p>
+                            <a href="https://news-ai-app-toantran.netlify.app" class="button button--flex__button--small__portfolio__button">
                                 Explore
                                 <i class="uil uil-arrow-right button__icon"></i>
                             </a>
@@ -710,9 +712,10 @@
                         <img src="assets/img/portfolio3.jpg" alt="" class="portfolio__img">
 
                         <div class="portfolio__data">
-                            <h3 class="portfolio__title">Monetary Toan Bank</h3>
-                            <p class="portfolio__description">Essential and minimal banking app</p>
-                            <a href="https://toanquoctran.github.io/MonetaryToanBank/" class="button button--flex__button--small__portfolio__button">
+                            <h3 class="portfolio__title">Tinder for Programmers</h3>
+                            <p class="portfolio__description">The website, built with ReactJs, uses npmJs API and Material UI API for an approachable and vigorous library of fundamental and advanced components. <br> It contains Header, Tinder Cards, Chat List, Chat Screen, and Swipe Buttons.
+                                <br> The app contains Firebase, which provides the best back-end server and great database and analytics solution.</p>
+                            <a href="https://tinder4dev.netlify.app" class="button button--flex__button--small__portfolio__button">
                                 Explore
                                 <i class="uil uil-arrow-right button__icon"></i>
                             </a>
