--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
             <div class="about__buttons">
               <a
                 download=""
-                href="assets/pdf/ToanQuocTranSophomoreResume.pdf"
+                href="assets/pdf/ToanTranSophomoreResume.pdf"
                 class="button button--flex"
                 >Download Resume <i class="uil uil-download-alt button__icon"></i
               ></a>
@@ -684,10 +684,12 @@
                         <img src="assets/img/portfolio1.jpg" alt="" class="portfolio__img">
 
                         <div class="portfolio__data">
-                            <h3 class="portfolio__title">React 3D Portfolio Generator</h3>
-                            <p class="portfolio__description">The website, built with ReactJs, contains two part: <br> The input template with profile picture, personal information, important links, and professional information of the users. <br> The 3D portfolio, using the library ThreeJs,
-                                is exported with the input information.</p>
-                            <a href="https://toan-3d-portfolio-creator.netlify.app" class="button button--flex__button--small__portfolio__button">
+                            <h3 class="portfolio__title">Full Stack MERN: Learning Tracker</h3>
+                            <p class="portfolio__description">The website, built with MongoDB, ExpressJs, ReactJs, and NodeJs, is a learning tracking tool for skills the users, able to register and login accounts, learned, are learning, and going to learn.
+                                <br>ReactJs is used with Bootstrap to build up complex interfaces through simple Components, connect them to data on my backend server, through ExpressJs running on top of NodeJs, and render them as HTML.
+                                <br>Any interaction that causes a data change request is sent to the NodeJs based Express server, which grabs data from the MongoDB, and returns the data to the ReactJs frontend of the application, which is then presented
+                                to the users.</p>
+                            <a href="https://mern-stack-learning-tracker-toantran.netlify.app/login" class="button button--flex__button--small__portfolio__button">
                                 Explore
                                 <i class="uil uil-arrow-right button__icon"></i>
                             </a>
@@ -698,7 +700,7 @@
                         <img src="assets/img/portfolio2.jpg" alt="" class="portfolio__img">
 
                         <div class="portfolio__data">
-                            <h3 class="portfolio__title">Artificial Intelligence React News Reader</h3>
+                            <h3 class="portfolio__title">Artificial Intelligence ReactJs News Reader</h3>
                             <p class="portfolio__description">The website, built with ReactJs, uses an advanced Voice AI Platform that allows the users to add a voice interface to the News Reader without overhead. <br> The users are able to control literally every aspect in the app using
                                 their voice. <br> The app contains Material UI API for a robust, customizable, and accessible library of advanced components.</p>
                             <a href="https://news-ai-app-toantran.netlify.app" class="button button--flex__button--small__portfolio__button">
@@ -712,10 +714,10 @@
                         <img src="assets/img/portfolio3.jpg" alt="" class="portfolio__img">
 
                         <div class="portfolio__data">
-                            <h3 class="portfolio__title">Tinder for Programmers</h3>
-                            <p class="portfolio__description">The website, built with ReactJs, uses npmJs API and Material UI API for an approachable and vigorous library of fundamental and advanced components. <br> It contains Header, Tinder Cards, Chat List, Chat Screen, and Swipe Buttons.
-                                <br> The app contains Firebase, which provides the best back-end server and great database and analytics solution.</p>
-                            <a href="https://tinder4dev.netlify.app" class="button button--flex__button--small__portfolio__button">
+                            <h3 class="portfolio__title">ReactJs 3D Portfolio Generator</h3>
+                            <p class="portfolio__description">The website, built with ReactJs, contains two part: <br> The input template with profile picture, personal information, important links, and professional information of the users. <br> The 3D portfolio, using the library ThreeJs,
+                                is exported with the input information.</p>
+                            <a href="https://toan-3d-portfolio-creator.netlify.app" class="button button--flex__button--small__portfolio__button">
                                 Explore
                                 <i class="uil uil-arrow-right button__icon"></i>
                             </a>
