--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 
                 <div class="about__data">
                     <p class="about__description">
-                        A sophomore from UMass Amherst with skills in Algorithms and Data Structures, Data Analysis, and Front-end Web development
+                        A sophomore from UMass Amherst with skills in Machine Learning, Data Analytics, and Software Engineering
                     </p>
 
                     <div class="about__info">
@@ -171,7 +171,7 @@
                 >
               </div>
               <div>
-                <span class="about__info-title">3</span>
+                <span class="about__info-title">2</span>
                             <span class="about__info-name">Companies <br />
                   worked</span
                 >
