--- a/index.html
+++ b/index.html
@@ -123,10 +123,10 @@
                     <div class="home__data">
                         <h1 class="home__title">Hi, I am Toan</h1>
                         <h3 class="home__subtitle">
-                            Student
+                            Incoming Software Engineer Intern at Facebook - Menlo Park, CA, USA
                         </h3>
                         <p class="home__description">
-                            A Computer Science sophomore from the University of Massachusetts Amherst
+                            Computer Science sophomore from the University of Massachusetts Amherst
                         </p>
                         <a href="#contact" class="button button--flex">
                 Contact Me <i class="uil uil-message button__icon"></i>
@@ -240,7 +240,7 @@
                                             </div>
                                             <div class="skills__data">
                                                 <div class="skills__titles">
-                                                    <h3 class="skills__name">React</h3>
+                                                    <h3 class="skills__name">ReactJs</h3>
                                                     <span class="skills__number">50%</span>
                                                 </div>
                                                 <div class="skills__bar">
